updated (migrated to 9.x):
https://github.com/miho/VMF-Text/issues/10
https://github.com/miho/VMF-Text/issues/11